--- a/index.ipynb
+++ b/index.ipynb
@@ -348,11 +348,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Buenos Aires',\n",
+       " 'Country': 'Argentina',\n",
+       " 'Population': 13591863,\n",
+       " 'Area': 4758}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "los_cabos_pop = None\n",
+    "los_cabos_pop = cities[2]\n",
     "los_cabos_pop # 287651"
    ]
   },
