--- a/index.ipynb
+++ b/index.ipynb
@@ -348,22 +348,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "los_cabos_pop = dict(cities[3])\n",
+    "los_cabos_pop = cities[3]['Population']\n",
     "los_cabos_pop # 287651"
    ]
   },
